--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,8 @@
               }
             ],
             "styles": [
+              "node_modules/tui-image-editor/dist/tui-image-editor.css",
+              "node_modules/tui-color-picker/dist/tui-color-picker.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -92,6 +94,8 @@
               }
             ],
             "styles": [
+              "node_modules/tui-image-editor/dist/tui-image-editor.css",
+              "node_modules/tui-color-picker/dist/tui-color-picker.css",
               "src/styles.scss"
             ],
             "scripts": []
