--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-cli-ghpages": "^2.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "tui-image-editor": "^3.15.3",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
