--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/forms": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
+    "@angular/pwa": "^18.1.2",
     "@angular/router": "^18.1.0",
-    "@angular/service-worker": "^18.1.0",
+    "@angular/service-worker": "^18.1.2",
     "angular-cli-ghpages": "^2.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "tui-image-editor": "^3.15.3",
+    "web-push": "^3.6.7",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
