--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/pwa": "^18.1.2",
     "@angular/router": "^18.1.0",
     "@angular/service-worker": "^18.1.2",
+    "@capacitor/android": "^6.1.1",
+    "@capacitor/camera": "^6.0.1",
+    "@capacitor/cli": "^6.1.1",
+    "@capacitor/core": "^6.1.1",
     "angular-cli-ghpages": "^2.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
